--- a/components/puo5mgjkt-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/puo5mgjkt-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: puo5mgjkt-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-895dc450d0.8wft.p3.openshiftapps.com/rhtap/rhtap-qe:acb16ffa6d8a986a02b8925cf23cbaf7b73f70ee@sha256:bde1cebb6d12abbc795190932df9383580ea732b4ce42f6d7ca79c5b72adb3b7
+          name: container-image
